--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
   </header>
 
   <figure>
-    <video class ="summer" src="./video/video.mp4" autoplay muted loop></video>
-    <video class="winter bgmenu" src="./video/snow.mp4" autoplay muted loop></video>
+    <video class ="summer hide" src="./video/video.mp4" autoplay muted loop></video>
+    <video class="winter bgmenu hide" src="./video/snow.mp4" autoplay muted loop></video>
+
     <article class="text">
       <p>KDT<br/>Project 5TH</p>
       <ul>
-        <li><a href="#">
+        <li><a href="#" onclick="">
           <i class="fa-solid fa-fan"></i>
           <strong>SUMMMER</strong>
         </a></li>
