--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         </li>
         <li class="winterBtn">
           <a class="bgbtn" href="#">
-            <i class="fa-regular fa-bookmark"></i>
-            <strong>WINTER</strong>
+            <i class="fa-regular fa-snowflake"></i>            <strong>WINTER</strong>
           </a>
         </li>
       </ul>
