style.scss 태그 위치 수정

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </li>
         <li class="winterBtn">
           <a class="bgbtn" href="#">
-            <i class="fa-regular fa-snowflake"></i>            <strong>WINTER</strong>
+            <i class="fa-regular fa-snowflake"></i>            
+            <strong>WINTER</strong>
           </a>
         </li>
       </ul>
